--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1139,7 +1139,7 @@ set(NativeAppSource
 	UI/MiscScreens.cpp
 	UI/GameScreen.cpp
 	UI/GameSettingsScreen.cpp
-	UI/TiltAnalogSettingsScreen.cpp
+	UI/TiltSettingsScreen.cpp
 	UI/TouchControlLayoutScreen.cpp
 	UI/TouchControlVisibilityScreen.cpp
 	UI/GamepadEmu.cpp
