Shader Improvements and cleanup
Added sharpen shader

Added support for bloom and sharpen shader

cleanup

cleanup

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -18,6 +18,14 @@ Name=Vignette
 Author=Henrik
 Fragment=vignette.fsh
 Vertex=fxaa.vsh
+[Bloom]
+Name=Bloom
+Fragment=bloom.fsh
+Vertex=fxaa.vsh
+[Sharpen]
+Name=Sharpen
+Fragment=sharpen.fsh
+Vertex=fxaa.vsh
 [InverseColors]
 Name=Inverse Colors
 Author=Henrik
