--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -416,6 +416,7 @@ BEGIN
         MENUITEM "Pause When Not Focused",                  ID_OPTIONS_PAUSE_FOCUS
         MENUITEM "More Settings...",                        ID_OPTIONS_MORE_SETTINGS
         MENUITEM "Control Mapping...",                      ID_OPTIONS_CONTROLS
+        MENUITEM "Language...",                             ID_OPTIONS_LANGUAGE
         MENUITEM SEPARATOR
         MENUITEM "Stretch to Display",                      ID_OPTIONS_STRETCHDISPLAY
         MENUITEM "Fullscreen",                              ID_OPTIONS_FULLSCREEN
